# spark-play

./: .gitignore  Makefile  README.md  poetry-hacks.sh  poetry-init.sh  poetry-play.sh  pyproject.toml  requirements.txt  spark_play.pex
.github/workflows/: ci.yml
configs/: job-profile
data/enjoy.parquet/: .part-00000-61eda0ae-37d2-4ad9-9a0d-f9b40aa3ac90-c000.snappy.parquet.crc  part-00000-61eda0ae-37d2-4ad9-9a0d-f9b40aa3ac90-c000.snappy.parquet
flows/: pipeline-1.py
scripts/: kill-gcp.sh  poetry-play.sh  poetry-setup-skeleton.sh  setup-gcp.sh  submit-dataproc-spark.sh
src/spark_play/data/: query.py
src/spark_play/transforms/: __init__.py  synthetic_data.py
src/spark_play/utils/: features.py  helper.py  spark_session.py
tests/: tests.py
