[tool.poetry]
name = "spark-play"
version = "0.1.0"
description = ""
authors = ["Steffen Henkelmann <coder.henkelmann@gmail.com>"]
readme = "README.md"
packages = [{include = "spark_play", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.0"


[tool.poetry.scripts]
spark-play = "flows.pipeline-1:workflow"


[tool.poetry.group.dev.dependencies]
darglint = "^1.8.1"
flake8 = "^5.0.4"
black = "^22.10.0"
isort = "^5.10.1"
mypi = "^0.0.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pylint = "^2.15.3"
pydocstyle = "^6.1.1"
safety = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
